# trimero-konekto

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/konekto-api/: Cargo.toml
crates/konekto-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
crates/konekto-core/: Cargo.toml
crates/konekto-core/src/: context.rs  error.rs  grant.rs  kdf.rs  key.rs  lib.rs  random.rs  token.rs  wrap.rs
crates/konekto-core/src/token/: claims.rs  clock.rs  error.rs  jws.rs  keys.rs  session.rs  sign_ed25519.rs  sign_mldsa.rs
crates/konekto-db/: Cargo.toml
crates/konekto-db/migrations/: 0001_initial.sql
crates/konekto-db/src/: audit.rs  error.rs  identity.rs  lib.rs  pg.rs  records.rs  session.rs
docs/: threat-model.md
docs/adr/: 0001-rust-and-post-quantum-hybrid-cryptography.md  0002-context-key-type-system-encoding.md  0003-session-model.md  0004-identity-lifecycle.md  0005-organizational-identity.md  0006-hybrid-jws-token-implementation.md  0007-session-and-refresh-storage.md
