[package]
name = "konekto-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain logic and cryptographic types for Trimero Konekto."

[lints]
workspace = true

[dependencies]
zeroize = { version = "1.8", features = ["zeroize_derive"] }
thiserror = "1.0"
aws-lc-rs = "1.10"
argon2 = "0.5"
async-trait = "0.1"

ml-dsa = "0.1.0-rc.8"
blake2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt", "macros"] }
hex = "0.4"
