[package]
name = "konekto-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Persistence layer for Trimero Konekto: identities, credentials, wrapped keys, audit log."

[lints]
workspace = true

[dependencies]
konekto-core = { path = "../konekto-core" }
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
time = { version = "0.3", features = ["std"] }
