[package]
name = "konekto-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Persistence layer for Trimero Konekto: identities, credentials, wrapped keys, audit log."

[lints]
workspace = true

[features]
default = []
# Enables the Postgres-backed `IdentityStore` / `AuditLog` implementations
# (`pg` module). Adds sqlx + tokio + serde_json as hard dependencies.
postgres = ["dep:sqlx", "dep:tokio", "dep:serde_json"]

[dependencies]
konekto-core = { path = "../konekto-core" }
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
time = { version = "0.3", features = ["std"] }
async-trait = "0.1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "migrate",
    "macros",
    "json",
], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.40", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
